# prefixd

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  FEATURES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
configs/: gobgp.conf  inventory.yaml  nginx.conf  playbooks.yaml  prefixd-postgres.yaml  prefixd.yaml
docs/: api-versioning.md  api.md  benchmarks.md  cli.md  configuration.md  deployment.md  grafana.md  troubleshooting.md  upgrading.md
docs/adr/: 006-runtime-url-derivation.md  README.md
docs/detectors/: fastnetmon.md
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
frontend/__tests__/: create-mitigation.test.ts  csv.test.ts  error-boundary.test.tsx  use-auth.test.tsx  use-permissions.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(dashboard)/: layout.tsx  page.tsx
frontend/app/(dashboard)/admin/: page.tsx
frontend/app/(dashboard)/config/: page.tsx
frontend/app/(dashboard)/inventory/: page.tsx
frontend/app/(dashboard)/ip-history/: page.tsx
frontend/app/(dashboard)/mitigations/: page.tsx
frontend/app/(dashboard)/mitigations/[id]/: page.tsx
frontend/app/(dashboard)/mitigations/create/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/prefixd/[...path]/: route.ts
frontend/app/config/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: connection-status.tsx  error-boundary.tsx  require-auth.tsx  user-menu.tsx  websocket-provider.tsx
frontend/components/dashboard/: action-badge.tsx  action-type-badge.tsx  active-mitigations-mini.tsx  activity-feed-live.tsx  actor-badge.tsx  alerting-config-panel.tsx  audit-log-content-live.tsx  bgp-session-status.tsx  command-palette.tsx  dashboard-layout.tsx  event-detail-panel.tsx  events-content-live.tsx  keyboard-shortcuts-modal.tsx  mitigate-now-dialog.tsx  mitigation-activity-chart.tsx  mitigation-detail-panel.tsx  mitigations-content-live.tsx  playbook-editor.tsx  playbook-yaml-editor.tsx  quota-gauge.tsx  sidebar.tsx  source-badge.tsx  status-badge.tsx  top-bar.tsx  vector-breakdown-chart.tsx
frontend/components/ui/: chart.tsx  resizable.tsx  sonner.tsx
frontend/hooks/: use-api.ts  use-auth.tsx  use-keyboard-shortcuts.ts  use-permissions.ts  use-websocket.ts
frontend/lib/: api.ts  auth.ts  csv.ts  mock-api-data.ts
grafana/: prefixd-operations.json  prefixd-security.json
migrations/: 001_initial.sql  002_operators_sessions.sql  004_schema_migrations.sql
migrations/postgres/: 001_initial.sql
scripts/: chaos-test.sh  prefixd-fastnetmon.sh
src/: error.rs  lib.rs  main.rs  state.rs
src/alerting/: discord.rs  generic.rs  mod.rs  opsgenie.rs  pagerduty.rs  slack.rs  teams.rs  telegram.rs
src/api/: auth.rs  handlers.rs  metrics.rs  mod.rs  openapi.rs  ratelimit.rs  request_id.rs  routes.rs
src/auth/: backend.rs  mod.rs
src/bgp/: announcer.rs  gobgp.rs  mock.rs  mod.rs  proto.rs
src/config/: inventory.rs  mod.rs  playbooks.rs  settings.rs
src/db/: mock.rs  mod.rs  repository.rs  traits.rs
src/domain/: event.rs  flowspec.rs  mitigation.rs  mod.rs  operator.rs
src/guardrails/: mod.rs
src/observability/: alerting.rs  audit.rs  metrics.rs  mod.rs
src/policy/: correlation.rs  escalation.rs  mod.rs
src/scheduler/: mod.rs  reconcile.rs
src/ws/: handler.rs  messages.rs  mod.rs
tests/: integration.rs  integration_e2e.rs  integration_gobgp.rs  integration_postgres.rs
tests/common/: mod.rs
