[package]
name = "prefixd"
version = "0.5.0"
edition = "2024"
description = "BGP FlowSpec routing policy daemon for DDoS mitigation"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# HTTP server
axum = { version = "0.8", features = ["macros", "ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower = { version = "0.5", features = ["util", "limit"] }
tower-http = { version = "0.6", features = ["trace", "cors", "set-header", "limit"] }

# Authentication
axum-login = "0.18"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"] }
argon2 = "0.5"
password-hash = "0.5"

# WebSocket
futures-util = "0.3"
rustls = "0.23"
rustls-pemfile = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database (compile-time checked queries)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# gRPC for GoBGP
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics
prometheus = "0.14"
once_cell = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
async-trait = "0.1"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

[build-dependencies]
tonic-build = "0.14"
tonic-prost-build = "0.14"
prost-build = "0.14"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
test-utils = []

[[bin]]
name = "prefixd"
path = "src/main.rs"

[[bin]]
name = "prefixdctl"
path = "src/bin/prefixdctl.rs"
